--- a/vue-demo/src/main/resources/templates/index.html
+++ b/vue-demo/src/main/resources/templates/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--    <script src="/js/vue.js"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
-<!--    <script src="https://unpkg.com/vue"></script>-->
-<!--    <script src="/js/index.js"></script>-->
-
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+    <script src="https://unpkg.com/http-vue-loader"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/js/router.js"></script>
+    <script src="/js/app.js"></script>
 </head>
 <body>
     <div id="app">
-        {{ message }}
+        <top-menu></top-menu>
+        <router-view></router-view>
+        <bottom-info></bottom-info>
     </div>
-    <ul></ul>
-    <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                message: '안녕하세요 Vue!'
-            }
-        });
-    </script>
-
 </body>
 </html>
